fix #26 hide wrap guide

--- a/styles/zen.less
+++ b/styles/zen.less
@@ -15,10 +15,12 @@
     margin: 0 auto;
   }
 
-  
   .status-bar,
   .tab-bar {
     display: none;
+  }
+  .wrap-guide {
+    visibility: hidden;
   }
 
   ::shadow {
